Fix for bug #22367. Heads up - this will break syntactical compatiblity, return($foo) will not work with functions that return references - return $foo should be used instead.  It never worked well before, and caused all sorts of odd bugs. It *might* be possible to support this specifically, albeit unlikely

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@133992 c90b9560-bf6c-de11-be94-00142212c4b1